--- a/style.css
+++ b/style.css
@@ -1,5 +1,167 @@
-a:hover {
-    text-decoration: underline;
+.indexBody {
+  background-image: url(images/albumbg.png);
+  background-size: cover;
+  background-repeat: repeat;
+  background-attachment: fixed;
+}
+
+.indexMain h1 {
+  font-size: 4rem;
+  margin-top: .01rem;
+  padding: 0;
+  text-align: center;
+  color: #EE6C84;
+}
+
+#indexAlbum img {
+  display: block;
+  margin: auto;
+  width: 25% !important;
+}
+
+#indexAlbum {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+  padding: 2rem 0;
+}
+
+#indexTOUR img {
+  width: 25% !important;
+  display: block;
+  margin: auto;
+}
+
+#indexTOUR {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+  padding: 2rem 0;
+}
+
+#menuToggle {
+  display: block;
+  position: fixed;
+  top: 50px;
+  left: 50px;
+
+  z-index: 1;
+
+  -webkit-user-select: none;
+
+  user-select: none;
+}
+
+#menuToggle a {
+  text-decoration: none;
+  color:#EE6C84;
+  transition: color 0.3s ease;
+}
+
+#menuToggle a:hover {
+  color: white
+}
+
+#menuToggle input {
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+
+  cursor: pointer;
+
+  opacity: 0;
+  z-index: 2;
+
+  -webkit-touch-callout: none;
+}
+
+#menuToggle span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+
+  background:#EE6C84;
+  border-radius: 3px;
+
+  z-index: 1;
+
+  transform-origin: 4px 0px;
+
+  transition: transform 0.5s cubic-bezier(.77,.2,.05,1), background 0.5s cubic-bezier(.77,.2,.05,1), opacity .55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+#menu
+{
+  position: absolute;
+  max-width: 400px;
+  width: 100vw;
+  max-height: 100vh;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  box-sizing: border-box;
+  overflow-y: auto;
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+#menu li label
+{
+  cursor: pointer;
+}
+
+
+#menuToggle input:checked ~ ul
+{
+  transform: none;
 }
 
 footer a {
@@ -8,7 +170,7 @@ footer a {
 }
 
 footer {
-  background-color: #FFB6C1;
+  background-color: #EE6C84;
   padding: 2rem;
   font: 10px Arial Black, sans-serif;
   color: white;
@@ -45,4 +207,8 @@ margin: 0 10px;
     font-weight: bold;
     margin: 0 2rem;
     text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
