--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 @font-face {
   font-family: "Toledo2";
   src: url(images/Toledo-Medium\ Regular.ttf);
@@ -18,7 +29,7 @@
 .indexMain h1 {
   font: 100px Toledo2;
   margin-top: .01rem;
-  padding: 0;
+  padding-bottom: 100px;
   text-align: center;
   color: #EE6C84;
 }
@@ -300,13 +311,13 @@ footer {
 }
 
 .footerSocials a {
-margin: 0 10px;
+    margin: 0 10px;
 }
 
 .footerSocials img {
-  width: 20px;
-  height: 20px;
-  filter: brightness(100);
+    width: 20px;
+    height: 20px;
+    filter: brightness(100);
 }
 
 .footerBottom a {
