--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ html, body {
 }
 
 @font-face {
+  font-family: "BankGothic-MD";
+  src: url(images/BankGothic\ Md\ BT.ttf);
+}
+
+@font-face {
   font-family: "Toledo2";
   src: url(images/Toledo-Medium\ Regular.ttf);
 }
@@ -26,7 +31,7 @@ html, body {
   background-attachment: fixed;
 }
 
-.indexMain h1 {
+.pageTitle h1 {
   font: 100px Toledo2;
   margin-top: .01rem;
   padding-bottom: 100px;
@@ -280,6 +285,105 @@ html, body {
 #menuToggle input:checked ~ ul
 {
   transform: none;
+}
+
+
+.musicBody {
+  background-image: url(images/albumbg.png);
+  background-size: cover;
+  background-repeat: repeat;
+  background-attachment: fixed;
+}
+
+.featuredRelease {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 3rem;
+  font: BankGothic-MD;
+}
+
+.featuredRelease img {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  margin-bottom: 1.2rem;
+  animation: mymove3 4s infinite;
+}
+
+.featuredRelease img:hover {
+  border: 3px solid white;
+}
+
+@keyframes mymove3 {
+    0%, 100% {
+    box-shadow: 0 0 15px 10px #7CA8D9;
+  }
+  50% {
+    box-shadow: 0 0 30px 20px #7CA8D9;
+  }
+}
+
+.featuredButton {
+  background-color: #7CA8D9;
+  padding: .5rem;
+  margin-top: 10px;
+}
+
+.featuredButton:hover {
+  border: 2px solid white;
+}
+
+.featuredText h2 {
+  font: bold 1.25rem BankGothic-MD;
+  margin-bottom: .5rem;
+  color: white;
+}
+
+.featuredLink {
+  text-decoration: none;
+  font: italic bold 1rem Arial Black;
+  color: white;
+}
+
+.featuredText a:hover {
+  text-decoration: underline;
+}
+
+.albumGrid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
+  padding: 2rem 0;
+}
+
+.albumCard {
+  text-align: center;
+  max-width: 250px;  
+}
+
+.albumCard img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border: 1px solid black;
+}
+
+.albumTitle {
+  font: bold 15px Arial Black;
+  margin: 0.5rem 0;
+}
+
+.streamLink {
+  text-decoration: none;
+  font:italic bold 10px Arial Black;
+  color: black;
+}
+
+.streamLink:hover {
+  text-decoration: underline;
 }
 
 footer a {
