--- a/style.css
+++ b/style.css
@@ -119,11 +119,6 @@ html, body {
   
 }
 
-.arrowGif {
-  width: 40px;
-  height:auto;
-}
-
 #ticketButton:hover {
   border: 2px solid #AFF988;
   padding: .5em;
@@ -188,6 +183,11 @@ html, body {
   text-decoration: none;
   color:white;
   transition: color 0.3s ease;
+  text-shadow: 
+  -1px -1px 0 black,
+  1px -1px 0 black,
+  -1px 1px 0 black,
+  1px 1px 0 black;
 }
 
 #menuToggle a:hover {
@@ -280,9 +280,10 @@ html, body {
 
 #menu li
 {
-  font: bold 22px Arial Black;
+  font: bold 24px EkMukta;
   text-align: center;
   padding: 30px 0;
+  margin: 1.5rem 0;
 }
 
 #menu li label
@@ -373,6 +374,10 @@ html, body {
   border: 1px solid black;
 }
 
+.albumCard img:hover {
+  border: 1px solid white;
+}
+
 .albumTitle {
   font: bold 15px Arial Black;
   margin: 0.5rem 0;
@@ -398,36 +403,52 @@ html, body {
 
 
 .tourBorder {
-  align-items: baseline;
-  display: flex;
-  flex-direction: row;
-  padding: 1rem;
+  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 3fr 2fr auto;
+  padding: 1rem 2rem;
   border: 2px solid black;
+  width: 65%;
+  column-gap: 2rem;
 }
 
 .tourBorder:hover {
   border: 2px solid white;
+  background-image: url(images/albumbgINVERT.png);
+  color: white;
+  text-shadow: 
+  -1px -1px 0 black,
+  1px -1px 0 black,
+  -1px 1px 0 black,
+  1px 1px 0 black;
 }
 
 .tourDates {
   font: italic bold 12px Arial Black;
   padding-right: 2rem;
+  flex: 1;
 }
 
 .tourVenue {
-  font: bold 18px Arial Black;
+  font: bold 16px Arial Black;
   padding-right: 2rem;
+  flex: 3;
 }
 
 .tourLocation {
   font: bold 14px Arial Black;
-  padding-right: 2rem;
+  flex: 2;
 }
 
 .tourLinkBorder {
   border: 2px solid black;
-  padding: .5rem;
+  padding: .4rem;
   background-color: #63645E;
+  flex-shrink: 0;
+}
+
+.tourLinkBorder:hover {
+  border: 2px solid white;
 }
 
 .tourLink {
